--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^16.11.38",
     "@types/react-dom": "^18.0.5",
     "firebase": "^9.8.2",
+    "leo-profanity": "^1.5.0",
+    "profanities": "^3.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leo-profanity": "^1.5.0",
     "@types/react": "^18.0.12",
     "@types/styled-components": "^5.1.25",
     "babel-plugin-styled-components": "^2.0.7"
