--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.38",
     "@types/react-dom": "^18.0.5",
+    "bootstrap": "^5.2.0-beta1",
     "firebase": "^9.8.2",
     "leo-profanity": "^1.5.0",
     "profanities": "^3.0.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
